--- a/15_gestor_productos/src/main/webapp/gestor.html
+++ b/15_gestor_productos/src/main/webapp/gestor.html
@@ -12,7 +12,7 @@
 			<table>
 			<h3>Nuevo producto</h3>
 			</table>
-			<table><butonProductos por categorías</h3></table>
+			<table>Productos por categorías</h3></table>
 			<table><h3>Eliminar producto</h3></table>
 		
 		
