--- a/37_manipulacion_etiquetas/public/04_cambiar_estilos_grupo.html
+++ b/37_manipulacion_etiquetas/public/04_cambiar_estilos_grupo.html
@@ -14,7 +14,11 @@
 
     <script>
         function negrita() {
-            var 
+        	var parrafos=document.getElementsByTagName("p");
+            
+            for(let p of parrafos){
+                p.style.fontWeight="Bold";
+            } 
         }
 
 
